# cz-telemetry

./: README.md  app.py  cspell.json  install.bat  install.sh  main.py  pyproject.toml  start.bat  start.sh
src/telemetry/: telemetry.py
src/ui/: __init__.py  gps_graph.py  log_viewer.py  ui.py  value_grid.py
telemetry/: pyproject.toml
telemetry/src/telemetry/: __init__.py
ui/: pyproject.toml
