[project]
name = "cz-telemetry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kivy-garden-matplotlib>=0.1.1.dev0",
    "kivy[full]>=2.3.1",
    "matplotlib>=3.10.7",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[tool.uv.workspace]
members = [
    "telemetry",
    "ui",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
