[project]
name = "telemetry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [

]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
telemetry = "telemetry:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
